feat: 인증 세션과 Google 리다이렉트 구현
